--- a/META.yml
+++ b/META.yml
@@ -1,10 +1,10 @@
 --- #YAML:1.0
 name: POE-Adaptor-Net-LDAP
-version: 0.01
+version: 0.02
 author:
   - "Jonathan Steinert\r\nhachi@cpan.org"
 abstract: |-
-  POE Adaptor for using Net::LDAP in an async environment.
+  subclass of Net::LDAP which uses POE to speak via sockets in async mode.
 license: perl
 requires:
   Convert::ASN1: 0
@@ -16,15 +16,15 @@ requires:
   POE::Kernel: 0
   POE::Session: 0
   POE::Wheel::ReadWrite: 0
-  WeakRef: 0
+  POE::Wheel::SocketFactory: 0
   perl: 5.6
 build_requires:
   Module::Build: 0
 provides:
   POE::Adaptor::Net::LDAP:
     file: lib/POE/Adaptor/Net/LDAP.pm
-    version: 0.01
+    version: 0.02
   POE::Filter::ASN1:
     file: lib/POE/Filter/ASN1.pm
     version: 0.01
-generated_by: Module::Build version 0.24
+generated_by: Module::Build version 0.25
